--- a/crt_portal/static/sass/custom/intake.scss
+++ b/crt_portal/static/sass/custom/intake.scss
@@ -14,6 +14,7 @@
 
     .title-copy {
       @include text--heading__medium();
+      font-family: family('heading');
       color: color('white');
       font-weight: 400;
       margin-left: 0.8rem;
